--- a/style.scss
+++ b/style.scss
@@ -363,34 +363,34 @@ $padding--XXL: 6rem;
       }
     }
   }
-  .es-video {
-    max-width: 960px;
-    min-width: 320px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+  // .es-video {
+  //   max-width: 960px;
+  //   min-width: 320px;
+  //   margin: 0 auto;
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: flex-end;
 
-    &__videoCnt {
-      width: 72%;
-      margin: 0 auto;
-      padding: 40px 0;
+  //   &__videoCnt {
+  //     width: 72%;
+  //     margin: 0 auto;
+  //     padding: 40px 0;
       
-    }
-    video {
-      display: block;
-      margin: auto;
-      width: 80%;
-      object-fit: contain;
-      overflow-clip-margin: content-box;
-      overflow: clip;
-    }
-    // &__iframe {
-    //   width: 100%;
-    //   min-height: 450px;
-    //   z-index: 1;
-    // }
-  }
+  //   }
+  //   video {
+  //     display: block;
+  //     margin: auto;
+  //     width: 80%;
+  //     object-fit: contain;
+  //     overflow-clip-margin: content-box;
+  //     overflow: clip;
+  //   }
+  //   &__iframe {
+  //    width: 100%;
+  //   min-height: 450px;
+  //   /z-index: 1;
+  //   }
+  // }
   .es-before-after {
     background-image: url("#{$file-path}bg-before-after#{$img-format}");
     @include bg-cover(center);
