--- a/Portals/0/rich-content/garnier/hairdrink/css/style.css
+++ b/Portals/0/rich-content/garnier/hairdrink/css/style.css
@@ -29,7 +29,7 @@
   position: relative;
 }
 #es-RC-container .es-hero__left {
-  background-image: url("./img/bg-hero-L.jpg");
+  background-image: url("https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/bg-hero-L.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: left center;
@@ -63,7 +63,7 @@
   text-align: center;
 }
 #es-RC-container .es-hero__right {
-  background-image: url("./img/bg-hero-R.jpg");
+  background-image: url("https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/bg-hero-R.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
@@ -187,7 +187,7 @@
   scale: 1.05;
 }
 #es-RC-container .es-how {
-  background-image: url("./img/bg-hair.jpg");
+  background-image: url("https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/bg-hair.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -283,30 +283,8 @@
   text-transform: uppercase;
   color: #f08365;
 }
-#es-RC-container .es-video {
-  max-width: 960px;
-  min-width: 320px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-#es-RC-container .es-video__videoCnt {
-  width: 72%;
-  margin: 0 auto;
-  padding: 40px 0;
-}
-#es-RC-container .es-video video {
-  display: block;
-  margin: auto;
-  width: 80%;
-  -o-object-fit: contain;
-     object-fit: contain;
-  overflow-clip-margin: content-box;
-  overflow: clip;
-}
 #es-RC-container .es-before-after {
-  background-image: url("./img/bg-before-after.jpg");
+  background-image: url("https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/bg-before-after.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -332,7 +310,7 @@
   text-transform: uppercase;
   font-size: clamp(1.625rem, 1.4rem + 1.2vw, 2rem);
   color: white;
-  background-image: url("./img/bg-routine.jpg");
+  background-image: url("https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/bg-routine.jpg");
   padding: 2rem;
 }
 #es-RC-container .es-routine__header span {
@@ -413,7 +391,7 @@
   top: 50%;
   width: 90%;
   padding-block: 2rem;
-  background-image: url("./img/recycle-symbol.jpg");
+  background-image: url("https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/recycle-symbol.jpg");
   background-color: white;
   background-size: contain;
   background-repeat: no-repeat;
@@ -585,7 +563,7 @@
     height: 3.5rem;
   }
   #es-RC-container .es-how__wrapper::before {
-    content: url("./img/arrow-left.png");
+    content: url("https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/arrow-left.png");
     position: absolute;
     left: -125px;
     top: 93px;
@@ -600,7 +578,7 @@
     padding: unset;
   }
   #es-RC-container .es-routine__bg {
-    background-image: url("./img/bg-routine.jpg");
+    background-image: url("https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/bg-routine.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     padding-top: 2rem;
