--- a/Portals/0/rich-content/garnier/hairdrink/css/style.scss
+++ b/Portals/0/rich-content/garnier/hairdrink/css/style.scss
@@ -35,7 +35,7 @@ $txt-stroke--accent: -1px 1px 0 $color--accent-2, 1px 1px 0 $color--accent-2,
 
 // utility variables
 // images
-$file-path: "./img/";
+$file-path: "https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/";
 $img-format: ".jpg";
 
 // padding
